Bug 97490 - latest xf86-video-ati from git doesn't compile (probably xserver too old)
Summary: latest xf86-video-ati from git doesn't compile (probably xserver too old)
Status: CLOSED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/Radeon (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: xf86-video-ati maintainers
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-08-26 07:41 UTC by joro-2013
Modified: 2016-08-30 17:00 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description joro-2013 2016-08-26 07:41:39 UTC
error message:

  CC     radeon_kms.lo
radeon_kms.c: In function 'RADEONBlockHandler_KMS':
radeon_kms.c:845:17: error: 'struct _Screen' has no member named 'isGPU'
     if (!pScreen->isGPU) {
                 ^
make[2]: *** [radeon_kms.lo] Fehler 1

xserver:

X.Org X Server 1.11.3
Release Date: 2011-12-16
Comment 1 Michel Dänzer 2016-08-29 01:59:57 UTC
commit a92c27484703abc7c410b6ae0e4b8d1efbbb8e6f
Author: Michel Dänzer <michel.daenzer@amd.com>
Date:   Fri Aug 26 18:09:03 2016 +0900

    Fix build against xserver < 1.13


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.