Fix build against xserver < 1.13

pScreen->isGPU was only introduced in 1.13.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=97490
Reviewed-by: Alex Deucher <alexander.deucher@amd.com>